# aww

./: .gitignore  Cargo.toml  flake.nix  rustfmt.toml
aww-cli/: Cargo.toml
aww-cli/src/: ipc.rs  main.rs
aww-daemon/: Cargo.toml
aww-ipc/: Cargo.toml
aww-ipc/src/: lib.rs
src/: main.rs
