[package]
name = "aww-cli"
version = "0.1.0"

edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aww-ipc = { path = "../aww-ipc" }
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
miette = { version = "7.6.0", features = ["fancy"] }
